# ResumeReworker

./: .env.example  .gitignore  Caddyfile  PRODUCT.md  README.md  backend.sh  docker-compose.yml  format.sh  requirements.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.latex  app.py  compile.sh  main.py  pyproject.toml  test_fitz.py
backend/api/routes/: __init__.py  auth.py  resumes.py  setup.py  share.py  templates.py
backend/core/: config.py  database.py  rate_limit.py  security.py
backend/models/: __init__.py  models.py
backend/schemas/: __init__.py  auth_schema.py  resume_request_schema.py  resume_schema.py  schema.py
backend/services/: auth_service.py  llm_service.py  preview.py  renderer.py  resume_service.py  storage.py  workflow.py
backend/templates/: default.tex  jakes-light.tex  jakes-standard.tex  jakes.tex  jakes1.tex  jakes2.tex  jakes3.tex  jakes_template.tex  modern1.tex  mordern2.tex  mordern3.tex
backend/utils/: constants.py  diff_engine.py  error_helpers.py  http_client.py  mappers.py  pdf_extractor.py  prompts.py  resume_text.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/apis/: api.ts  auth.ts  resumes.ts  setup.ts  share.ts  templates.ts
frontend/src/components/: ActionButtons.tsx  AppLayout.tsx  AuthForm.tsx  BrandLogo.tsx  GoogleIcon.tsx  HeroResumeCard.tsx  LibraryResumeCard.tsx  NavItem.tsx  PdfUploadZone.tsx  ai-input.tsx
frontend/src/hooks/: useResumeAnalysis.ts
frontend/src/schemas/: constants.ts  index.ts  resumes.ts  share.ts  templates.ts
frontend/src/store/: authStore.ts  resumeStore.ts
src/: app.py  jakes-teemplate.py  jakes_template.py  main.py  prompts.py  res.py  schema.py
(+17 files in other folders)
