[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "cloudconvert>=2.1.0",
    "cloudinary>=1.44.2",
    "fastapi>=0.138.0",
    "fastapi-limiter==0.1.6",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.2",
    "pylatex>=1.4.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "slowapi>=0.1.10",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]
